# emote_touhyou

./: Cargo.toml  LICENSE  README.md
src/: main.rs
