[package]
name = "emote_touhyou"
version = "0.1.0"
authors = ["Infi <infiziert@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.8.0", features=["framework", "standard_framework", "rustls_backend", "utils", "builder"]}
serde = "1.0.104"
serde_json = "1.0.48"
env_logger = "0.7.1"
image = "0.23.0"
lazy_static = "1.4.0"
base64 = "0.11.0"
